<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="28sp"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="28sp"
        android:text="@string/_1493"
        android:visibility="gone"
        android:textColor="#797676"
        app:layout_constraintBottom_toTopOf="@id/Line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View

        android:id="@+id/Line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="6dp"
        android:background="@color/linecolor"
        app:layout_constraintBottom_toTopOf="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ce"
                style="@style/operatorbutton"
                android:onClick="onClearClick"
                android:text="@string/c"
                android:textColor="#EF6C00" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_backspace"
                style="@style/digitbutton"
                android:onClick="onBackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/brnBackground2"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/percent"
                android:textColor="#EF6C00" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_div"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/division"
                android:textColor="#EF6C00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multi"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/multiply"
                android:textColor="#EF6C00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/plus"
                android:textColor="#EF6C00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/minus"
                android:textColor="#EF6C00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/operatorbutton"
                android:onClick="onAllclearClick"
                android:text="@string/ac"
                android:textColor="#EF6C00"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_0" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/operatorbutton"
                android:backgroundTint="@color/brnBackground2"
                android:onClick="onEqualClick"
                android:text="@string/equal"
                android:textColor="#795548" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
